cmake_minimum_required(VERSION 4.0)
project(IS_TP2_Algorithmique)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercice1
        Exercice1/Question1.cpp)

add_executable(Exercice2
        Exercice2/Question2.cpp)

add_executable(Exercice3
        Exercice3/Question3.cpp
        Exercice3/Question3.cpp)

add_executable(Exercice4
        Exercice4/Question4V2.cpp)
